secondfile/objects/RDS_V4_LAN_IP_Address__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V4 Family Data-RDS-V4 LAN IP Address</description>
    <fields>
        <fullName>Address_Mask__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V4 Family Data-RDS-V4 LAN IP Address-Address Mask</description>
        <label>Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V4 Family Data-RDS-V4 LAN IP Address-Address Type</description>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V4 Family Data-RDS-V4 LAN IP Address-IP Address</description>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V4 Family Data-RDS-V4 LAN IP Address-Length</description>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_V4_Family_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V4 Family Data-RDS-V4 LAN IP Address-RDS-V4 Family Data</description>
        <label>RDS-V4 Family Data</label>
        <referenceTo>RDS_V4_Family_Data__c</referenceTo>
        <relationshipLabel>RDS-V4 LAN IP Address</relationshipLabel>
        <relationshipName>RDS_V4_LAN_IP_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RDS-V4 LAN IP Address</label>
    <nameField>
        <displayFormat>V4-{00000}</displayFormat>
        <label>RDS-V4 LAN IP Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-V4 LAN IP Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Record_Lock_after_Deal_Hash_creation_V4L</fullName>
        <active>true</active>
        <errorConditionFormula>(((ISNULL(RDS_V4_Family_Data__r.RDS_Circuit_and_VLAN_Details_V4__c) || ISBLANK(RDS_V4_Family_Data__r.RDS_Circuit_and_VLAN_Details_V4__c))&amp;&amp; ( RDS_V4_Family_Data__r.RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos;)) || ((ISNULL(RDS_V4_Family_Data__r.RDS_VLAN_Information_V4__c) || ISBLANK(RDS_V4_Family_Data__r.RDS_VLAN_Information_V4__c))&amp;&amp; (  RDS_V4_Family_Data__r.RDS_Circuit_and_VLAN_Details_V4__r.Premise__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos; &amp;&amp; $Profile.Name&lt;&gt;&apos;ATT Partner Community User&apos;))) &amp;&amp; NOT( ISNEW())</errorConditionFormula>
        <errorMessage>Record cannot be updated after Deal Hash has been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_v4Lan</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-V4 LAN IP Address record.</errorMessage>
    </validationRules>
</CustomObject>